product-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: product-api
        image: felipe070700/liah:latest  # Imagem da API no Docker Hub
        ports:
        - containerPort: 3030
