product-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 3030          # Porta que o Service escuta
    targetPort: 3030   # Porta exposta pelo container
  type: NodePort
